; ModuleID = '/home/carl/AnghaBench/git/extr_convert.c_encode_to_worktree.c'
source_filename = "/home/carl/AnghaBench/git/extr_convert.c_encode_to_worktree.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }

@default_encoding = common dso_local global i8* null, align 8
@.str = private unnamed_addr constant [36 x i8] c"failed to encode '%s' from %s to %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i8*, i64, %struct.strbuf*, i8*)* @encode_to_worktree to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @encode_to_worktree(i8* %0, i8* %1, i64 %2, %struct.strbuf* %3, i8* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca %struct.strbuf*, align 8
  %11 = alloca i8*, align 8
  %12 = alloca i8*, align 8
  %13 = alloca i64, align 8
  store i8* %0, i8** %7, align 8
  store i8* %1, i8** %8, align 8
  store i64 %2, i64* %9, align 8
  store %struct.strbuf* %3, %struct.strbuf** %10, align 8
  store i8* %4, i8** %11, align 8
  %14 = load i8*, i8** %11, align 8
  %15 = icmp ne i8* %14, null
  br i1 %15, label %16, label %22

16:                                               ; preds = %5
  %17 = load i8*, i8** %8, align 8
  %18 = icmp ne i8* %17, null
  br i1 %18, label %19, label %23

19:                                               ; preds = %16
  %20 = load i64, i64* %9, align 8
  %21 = icmp ne i64 %20, 0
  br i1 %21, label %23, label %22

22:                                               ; preds = %19, %5
  store i32 0, i32* %6, align 4
  br label %44

23:                                               ; preds = %19, %16
  %24 = load i8*, i8** %8, align 8
  %25 = load i64, i64* %9, align 8
  %26 = load i8*, i8** %11, align 8
  %27 = load i8*, i8** @default_encoding, align 8
  %28 = call i8* @reencode_string_len(i8* %24, i64 %25, i8* %26, i8* %27, i64* %13)
  store i8* %28, i8** %12, align 8
  %29 = load i8*, i8** %12, align 8
  %30 = icmp ne i8* %29, null
  br i1 %30, label %37, label %31

31:                                               ; preds = %23
  %32 = call i32 @_(i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str, i64 0, i64 0))
  %33 = load i8*, i8** %7, align 8
  %34 = load i8*, i8** @default_encoding, align 8
  %35 = load i8*, i8** %11, align 8
  %36 = call i32 @error(i32 %32, i8* %33, i8* %34, i8* %35)
  store i32 0, i32* %6, align 4
  br label %44

37:                                               ; preds = %23
  %38 = load %struct.strbuf*, %struct.strbuf** %10, align 8
  %39 = load i8*, i8** %12, align 8
  %40 = load i64, i64* %13, align 8
  %41 = load i64, i64* %13, align 8
  %42 = add i64 %41, 1
  %43 = call i32 @strbuf_attach(%struct.strbuf* %38, i8* %39, i64 %40, i64 %42)
  store i32 1, i32* %6, align 4
  br label %44

44:                                               ; preds = %37, %31, %22
  %45 = load i32, i32* %6, align 4
  ret i32 %45
}

declare dso_local i8* @reencode_string_len(i8*, i64, i8*, i8*, i64*) #1

declare dso_local i32 @error(i32, i8*, i8*, i8*) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i32 @strbuf_attach(%struct.strbuf*, i8*, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
